--- a/vpnserver/index.html
+++ b/vpnserver/index.html
@@ -13,6 +13,8 @@
   <body>
     <h1>VPN SERVER</h1>
 
+    <h1>oswoosow osowowsw</h1>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
