--- a/vpnserver/index.html
+++ b/vpnserver/index.html
@@ -12,8 +12,9 @@
   </head>
   <body>
     <h1>VPN SERVER</h1>
+    
 
-    <h1>oswoosow osowowsw</h1>
+    <small>oswoosow osowowsw</small>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
