--- a/vpnserver/index.html
+++ b/vpnserver/index.html
@@ -13,8 +13,8 @@
   <body>
     <h1>VPN SERVER</h1>
     
-
-    <small>oswoosow osowowsw</small>
+<br>
+    <small>VPN atau Jaringan Pribadi Virtual (Virtual Private Network) membuat koneksi jaringan privat di antara beberapa perangkat melalui internet. VPN digunakan untuk mentransmisikan data secara aman dan anonim melalui jaringan publik. VPN bekerja dengan cara menyembunyikan alamat IP pengguna dan mengenkripsi data sehingga tidak dapat dibaca oleh siapa pun yang tidak berwenang untuk menerimanya.</small>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
