--- a/vpnserver/index.html
+++ b/vpnserver/index.html
@@ -11,11 +11,23 @@
     <title>VPN SERVER</title>
   </head>
   <body>
-    <h1>VPN SERVER</h1>
-    
+    <h1>Apa itu VPN SERVER?</h1>    
 <br>
     <small>VPN atau Jaringan Pribadi Virtual (Virtual Private Network) membuat koneksi jaringan privat di antara beberapa perangkat melalui internet. VPN digunakan untuk mentransmisikan data secara aman dan anonim melalui jaringan publik. VPN bekerja dengan cara menyembunyikan alamat IP pengguna dan mengenkripsi data sehingga tidak dapat dibaca oleh siapa pun yang tidak berwenang untuk menerimanya.</small>
+<br>
+    <h1>Apa kegunaan VPN?</h1>
+<br>
+    <small>Layanan VPN utamanya digunakan untuk mengirimkan data secara aman melalui internet. Tiga fungsi utama VPN:
 
+1. Privasi
+Tanpa jaringan privat virtual, data pribadi Anda seperti kata sandi, informasi kartu kredit, dan riwayat penjelajahan dapat direkam dan dijual oleh pihak ketiga. VPN menggunakan enkripsi untuk menjaga kerahasiaan informasi ini, terutama saat terhubung melalui jaringan Wi-Fi publik. 
+
+2. Anonimitas
+Alamat IP Anda berisi informasi tentang lokasi dan aktivitas penjelajahan Anda. Semua situs web di internet melacak data ini dengan menggunakan cookie dan teknologi serupa. Situs web dapat mengenali Anda kapan pun Anda mengunjunginya. Koneksi VPN akan menyembunyikan alamat IP Anda sehingga Anda menjadi anonim di internet.
+
+3. Keamanan
+Layanan VPN menggunakan kriptografi untuk melindungi koneksi internet Anda dari akses tidak sah. Layanan ini juga bertindak sebagai mekanisme pematian (shut-down), yang akan menghentikan program yang dipilih sebelumnya jika ditemukan aktivitas internet yang mencurigakan. Layanan ini mengurangi kemungkinan data tersusupi. Fitur ini memungkinkan perusahaan untuk memberikan akses jarak jauh kepada pengguna sah melalui jaringan bisnis mereka.</small>
+    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
